Remove .DS_Store

--- a/guides/langchain_data_analysis/lagchain_data_analysis.ipynb
+++ b/guides/langchain_data_analysis/lagchain_data_analysis.ipynb
@@ -107,8 +107,8 @@
     "import os\n",
     "from IPython.display import Image\n",
     "\n",
-    "os.environ[\"E2B_API_KEY\"] = \"e2b_d5db0b24b13f426a698503143a06f53e51302059\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"E2B_API_KEY\"] = \"<E2B_API_KEY>\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"<OPENAI_API_KEY>\"\n",
     "\n",
     "# E2B Sandbox\n",
     "session = DataAnalysis()\n",
