--- a/examples/llama-3-code-interpreter/llama3_code_interpreter.ipynb
+++ b/examples/llama-3-code-interpreter/llama3_code_interpreter.ipynb
@@ -1,6 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Llama 3 + E2B Code interpreter        \n",
+        "**Powered by [Code Interpreter SDK](https://github.com/e2b-dev/code-interpreter) by [E2B](https://e2b.dev/docs)**\n",
+        "\n",
+        "E2B's code interpreter SDK quickly creates a secure cloud sandbox powered by [Firecracker](https://github.com/firecracker-microvm/firecracker).\n",
+        "\n",
+        "Inside this sandbox is a running Jupyter server that the LLM can use."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
