Add description to the langgraph notebook

--- a/examples/langgraph-python/langgraph_code_interpreter.ipynb
+++ b/examples/langgraph-python/langgraph_code_interpreter.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LangGraph + Function Calling + E2B Code Interpreter        \n",
+    "**Powered by open-source [Code Interpreter SDK](https://github.com/e2b-dev/code-interpreter) by [E2B](https://e2b.dev/docs)**\n",
+    "\n",
+    "E2B's code interpreter SDK quickly creates a secure cloud sandbox powered by [Firecracker](https://github.com/firecracker-microvm/firecracker).\n",
+    "\n",
+    "Inside this sandbox is a running Jupyter server that the LLM can use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 1: Install dependencies\n",
+    "\n",
+    "We start by install the [E2B code interpreter SDK](https://github.com/e2b-dev/code-interpreter) and [LangChain Python SDK](https://console.groq.com/)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -71,22 +92,43 @@
     }
    ],
    "source": [
-    "%pip install langgraph e2b-code-interpreter langchain langchain-groq langchainhub langchain-openai python-dotenv"
+    "%pip install langgraph e2b-code-interpreter langchain langchain-groq langchainhub langchain-openai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 2: Define API keys, prompt, and tools\n",
+    "\n",
+    "Let's define our variables with API keys for OpenAI and E2B."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Get your OpenAI API key from https://platform.openai.com/api-keys\n",
+    "OPENAI_API_KEY = \"\"\n",
+    "\n",
+    "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
+    "E2B_API_KEY = \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 3: Implement the method for code interpreting\n",
+    "\n",
+    "Here's the tool definition that uses the E2B code interpreter SDK. We'll be using this to get the E2B code interpreter tool and to format the output of the tool."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext dotenv\n",
-    "%dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,10 +170,6 @@
     "        self.code_interpreter.close()\n",
     "\n",
     "    def call(self, parameters: dict, **kwargs: Any):\n",
-    "        # TODO: E2B supports generating and streaming charts and other rich data\n",
-    "        # because it has a full Jupyter server running inside the sandbox.\n",
-    "        # What's the best way to send this data back to frontend and render them in chat?\n",
-    "\n",
     "        code = parameters.get(\"code\", \"\")\n",
     "        print(f\"***Code Interpreting...\\n{code}\\n====\")\n",
     "        execution = self.code_interpreter.notebook.exec_cell(code)\n",
@@ -177,10 +215,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Step 4: Implement the methods for calling LLM, creating the workflow and invoking the LangGraph app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "***Code Interpreting...\n",
+      "import matplotlib.pyplot as plt\n",
+      "import numpy as np\n",
+      "\n",
+      "x = np.linspace(0, 2*np.pi, 100)\n",
+      "y = np.sin(x)\n",
+      "\n",
+      "plt.plot(x, y)\n",
+      "plt.title('Sine Wave')\n",
+      "plt.xlabel('x')\n",
+      "plt.ylabel('sin(x)')\n",
+      "plt.grid(True)\n",
+      "plt.show()\n",
+      "====\n"
+     ]
+    }
+   ],
    "source": [
     "from typing import List\n",
     "from langchain_groq import ChatGroq\n",
@@ -213,36 +279,8 @@
     "        else:\n",
     "            content = tool.invoke(tool_call[\"args\"])\n",
     "            tool_messages.append(RichToolMessage(content, tool_call_id=tool_call[\"id\"]))\n",
-    "    return tool_messages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***Code Interpreting...\n",
-      "import matplotlib.pyplot as plt\n",
-      "import numpy as np\n",
-      "\n",
-      "x = np.linspace(0, 2*np.pi, 100)\n",
-      "y = np.sin(x)\n",
-      "\n",
-      "plt.plot(x, y)\n",
-      "plt.title('Sine Wave')\n",
-      "plt.xlabel('x')\n",
-      "plt.ylabel('sin(x)')\n",
-      "plt.grid(True)\n",
-      "plt.show()\n",
-      "====\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return tool_messages\n",
+    "\n",
     "# 1. Pick your favorite llm\n",
     "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n",
     "# llm = ChatGroq(temperature=0, model_name=\"llama3-70b-8192\")\n",
@@ -273,7 +311,16 @@
     "# 4. Invoke the graph\n",
     "result = app.invoke([(\"human\", \"plot and show sinus\")])\n",
     "\n",
-    "code_interpreter.close()\n"
+    "code_interpreter.close()\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5: Displaying the results"
    ]
   },
   {
