--- a/examples/langchain-python/langchain_code_interpreter.ipynb
+++ b/examples/langchain-python/langchain_code_interpreter.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Implement the methods for formatting, creating and invoking the LangChain agent"
+    "### Step 4: Implement the methods for formatting messages, create and invoke the LangChain agent"
    ]
   },
   {
@@ -298,7 +298,6 @@
     "\n",
     "# 1. Pick your favorite llm\n",
     "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)\n",
-    "# llm = ChatGroq(temperature=0, model_name=\"llama3-70b-8192\")\n",
     "\n",
     "# 2. Initialize the code interpreter tool\n",
     "code_interpreter = CodeInterpreterFunctionTool()\n",
