--- a/examples/langgraph-python/langgraph_code_interpreter.ipynb
+++ b/examples/langgraph-python/langgraph_code_interpreter.ipynb
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Implement the methods for calling LLM, creating the workflow and invoking the LangGraph app"
+    "### Step 4: Implement the methods for calling tool, create workflow and invoke the LangGraph app"
    ]
   },
   {
@@ -315,7 +315,7 @@
     "\n",
     "app = workflow.compile()\n",
     "\n",
-    "# 4. Invoke the graph\n",
+    "# 4. Invoke the app\n",
     "result = app.invoke([(\"human\", \"plot and show sinus\")])\n",
     "\n",
     "code_interpreter.close()\n",
