--- a/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
+++ b/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Code Interpreting with GPT-4o\n",
+        "This example uses E2B's [code interpreter](https://github.com/e2b-dev/code-interpreter) as tool for GPT-4o. We ask GPT-4o to show as a chart which means GPT will generate Python code that will get send to E2B, we display the chart and then ask GPT-4o to reason about the generated chart and create a new chart.\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 75,
       "metadata": {
