Add example to the main readme

--- a/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
+++ b/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
@@ -5,8 +5,7 @@
       "metadata": {},
       "source": [
         "# Code Interpreting with GPT-4o\n",
-        "This example uses E2B's [code interpreter](https://github.com/e2b-dev/code-interpreter) as tool for GPT-4o. We ask GPT-4o to show as a chart which means GPT will generate Python code that will get send to E2B, we display the chart and then ask GPT-4o to reason about the generated chart and create a new chart.\n",
-        "\n"
+        "This example uses E2B's [code interpreter](https://github.com/e2b-dev/code-interpreter) as tool for GPT-4o. We ask GPT-4o to show as a chart which means GPT will generate Python code that will get send to E2B, we display the chart and then ask GPT-4o to reason about the generated chart and create a new chart."
       ]
     },
     {
