Add Python example with uploaded files

--- a/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
+++ b/examples/gpt-4o-code-interpreter/gpt_4o.ipynb
@@ -275,7 +275,6 @@
         "plot1 = code_interpreter_results[0]\n",
         "\n",
         "\n",
-        "\n",
         "print(plot1.raw)\n",
         "plot1"
       ]
@@ -341,8 +340,11 @@
       "source": [
         "# 2. Feed the image back the chart to GPT-4o and ask question about the image\n",
         "image = plot1.png\n",
-        "code_interpreter_results = chat(code_interpreter, \"Based on what you see, what's name of this distribution? Show me the distribution function\", image)\n",
-        "\n",
+        "code_interpreter_results = chat(\n",
+        "  code_interpreter,\n",
+        "  \"Based on what you see, what's name of this distribution? Show me the distribution function\",\n",
+        "  image,\n",
+        ")\n",
         "\n",
         "code_interpreter.close()\n",
         "\n",
