--- a/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
+++ b/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
@@ -281,7 +281,7 @@
       },
       "source": [
         "### Step 6: Put everything together\n",
-        "In this last step, we put all the pieces together. We intantiate a new code interpreter instance using\n",
+        "In this last step, we put all the pieces together. We instantiate a new code interpreter instance using\n",
         "```python\n",
         "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
         "```\n",
