--- a/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
+++ b/examples/upload-dataset-code-interpreter/llama_3_code_interpreter_upload_dataset.ipynb
@@ -269,7 +269,7 @@
       "source": [
         "def upload_dataset(code_interpreter):\n",
         "  print(\"Uploading dataset to Code Interpreter sandbox...\")\n",
-        "  with open(\"/content/drive/MyDrive/Colab Notebooks/city_temperature.csv\", \"rb\") as f:\n",
+        "  with open(\"./city_temperature.csv\", \"rb\") as f:\n",
         "    remote_path = code_interpreter.upload_file(f)\n",
         "  print(\"Uploaded at\", remote_path)"
       ]
