Add to readme and update notebook title

--- a/examples/magentic-code-interpreter/gpt_4o.ipynb
+++ b/examples/magentic-code-interpreter/gpt_4o.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Code Interpreting with magentic and GPT-4o\n",
+        "# Code Interpreter with magentic and GPT-4o\n",
         "\n",
         "This example uses [magentic](https://github.com/jackmpcollins/magentic) to demonstrate using the [E2B Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool with GPT-4o.\n",
         "\n",
