--- a/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
+++ b/examples/codestral-code-interpreter-python/codestral_code_interpreter.ipynb
@@ -93,10 +93,10 @@
       "outputs": [],
       "source": [
         "# TODO: Get your Mistral API key from https://console.mistral.ai\n",
-        "MISTRAL_API_KEY = \"RTdz1EQ2q5uPH867c7gCD1s4jo2yqj8n\"\n",
+        "MISTRAL_API_KEY = \"\"\n",
         "\n",
         "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
-        "E2B_API_KEY = \"e2b_7dd15697d859d0e4e8c8aabdc7ee2e09a78fa12a\"\n",
+        "E2B_API_KEY = \"\"\n",
         "\n",
         "MODEL_NAME = \"codestral-latest\"\n",
         "\n",
