Pass OpenAI API key when creating the client

--- a/examples/magentic-code-interpreter/magentic_code_interpreter.ipynb
+++ b/examples/magentic-code-interpreter/magentic_code_interpreter.ipynb
@@ -295,7 +295,7 @@
         "    UserMessage(\"Update the following chart based on the instructions: {instructions}\"),\n",
         "    UserImageMessage(Placeholder(str, \"image_url\")),\n",
         "    functions=[execute_python],\n",
-        "    model=OpenaiChatModel(\"gpt-4o\"),\n",
+        "    model=OpenaiChatModel(\"gpt-4o\", api_key=OPENAI_API_KEY),\n",
         ")\n",
         "def update_chart(instructions: str, image_url: str) -> FunctionCall[Execution]: ...\n",
         "\n",
