Add comments to Fireworks example

--- a/examples/fireworks/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks/fireworks_code_interpreter.ipynb
@@ -13,29 +13,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Installations\n",
     "First, we install Fireworks, OpenAI, and the E2B Code Interpreter SDK."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting fireworks-ai\n",
-      "  Downloading fireworks_ai-0.14.0-py3-none-any.whl.metadata (5.1 kB)\n",
-      "Requirement already satisfied: openai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (1.12.0)\n",
-      "Collecting openai\n",
-      "  Downloading openai-1.34.0-py3-none-any.whl.metadata (21 kB)\n",
-      "Requirement already satisfied: e2b_code_interpreter in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.0.8)\n",
-      "Collecting e2b_code_interpreter\n",
-      "  Downloading e2b_code_interpreter-0.0.9-py3-none-any.whl.metadata (3.2 kB)\n",
+      "Requirement already satisfied: fireworks-ai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.14.0)\n",
+      "Requirement already satisfied: openai in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (1.34.0)\n",
+      "Requirement already satisfied: e2b_code_interpreter in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (0.0.10)\n",
       "Requirement already satisfied: httpx in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from fireworks-ai) (0.27.0)\n",
-      "Collecting httpx-sse (from fireworks-ai)\n",
-      "  Downloading httpx_sse-0.4.0-py3-none-any.whl.metadata (9.0 kB)\n",
+      "Requirement already satisfied: httpx-sse in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from fireworks-ai) (0.4.0)\n",
       "Requirement already satisfied: pydantic in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from fireworks-ai) (2.7.1)\n",
       "Requirement already satisfied: Pillow in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from fireworks-ai) (10.0.1)\n",
       "Requirement already satisfied: anyio<5,>=3.5.0 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from openai) (3.7.1)\n",
@@ -66,26 +61,6 @@
       "Requirement already satisfied: frozenlist>=1.1.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp>=3.8.4->e2b>=0.17.1->e2b_code_interpreter) (1.4.0)\n",
       "Requirement already satisfied: aiosignal>=1.1.2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from aiohttp>=3.8.4->e2b>=0.17.1->e2b_code_interpreter) (1.3.1)\n",
       "Requirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from python-dateutil>=2.8.2->e2b>=0.17.1->e2b_code_interpreter) (1.16.0)\n",
-      "Downloading fireworks_ai-0.14.0-py3-none-any.whl (81 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m81.8/81.8 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading openai-1.34.0-py3-none-any.whl (325 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m325.5/325.5 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
-      "\u001b[?25hDownloading e2b_code_interpreter-0.0.9-py3-none-any.whl (9.9 kB)\n",
-      "Downloading httpx_sse-0.4.0-py3-none-any.whl (7.8 kB)\n",
-      "Installing collected packages: httpx-sse, openai, fireworks-ai, e2b_code_interpreter\n",
-      "  Attempting uninstall: openai\n",
-      "    Found existing installation: openai 1.12.0\n",
-      "    Uninstalling openai-1.12.0:\n",
-      "      Successfully uninstalled openai-1.12.0\n",
-      "  Attempting uninstall: e2b_code_interpreter\n",
-      "    Found existing installation: e2b-code-interpreter 0.0.8\n",
-      "    Uninstalling e2b-code-interpreter-0.0.8:\n",
-      "      Successfully uninstalled e2b-code-interpreter-0.0.8\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "crewai 0.1.32 requires langchain<0.2.0,>=0.1.0, but you have langchain 0.2.3 which is incompatible.\n",
-      "crewai 0.1.32 requires langchain-openai<0.0.3,>=0.0.2, but you have langchain-openai 0.1.8 which is incompatible.\n",
-      "open-interpreter 0.2.2 requires tiktoken<0.6.0,>=0.5.2, but you have tiktoken 0.7.0 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed e2b_code_interpreter-0.0.9 fireworks-ai-0.14.0 httpx-sse-0.4.0 openai-1.34.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -98,49 +73,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We import packages."
+    "### 2. Imports and API keys\n",
+    "We import packages, get API keys or save them to .env file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "import openai\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get your API keys or save them to .env file.\n",
+    "import json\n",
     "\n",
-    "TBD: Add E2B API Key, rename Fireworks API Key, add links."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
+    "\n",
     "\n",
     "# TODO: Get your OpenAI API key\n",
     "FIREWORKS_API_KEY = os.getenv(\"FIREWORKS_API_KEY\")\n",
     "\n",
     "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
-    "E2B_API_KEY = os.getenv(\"E2B_API_KEY\")"
+    "E2B_API_KEY = os.getenv(\"E2B_API_KEY\")\n",
+    "\n",
+    "from e2b_code_interpreter import CodeInterpreter\n",
+    "code_interpreter = CodeInterpreter(api_key=E2B_API_KEY)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3. Model setup, adding tools\n",
+    "\n",
     "Then we set up the model to use.\n",
     "\n",
     "We describe the functions available to the agent in great detail in JSON Schema. Here, it's just one function, the one that will execute the code generated by the LLM assistant.\n",
@@ -150,9 +116,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"content\": null,\n",
+      "    \"role\": \"assistant\",\n",
+      "    \"function_call\": null,\n",
+      "    \"tool_calls\": [\n",
+      "        {\n",
+      "            \"id\": \"call_4sg9wJbpCeCAzlGs1lNCEKb3\",\n",
+      "            \"function\": {\n",
+      "                \"arguments\": \"{\\\"code\\\": \\\"import matplotlib.pyplot as plt\\\\nimport numpy as np\\\\n\\\\n# Assuming a normal distribution with mean 175.5 cm and standard deviation 7.5 cm\\\\nheights = np.random.normal(175.5, 7.5, 1000)\\\\nplt.hist(heights, bins=20, alpha=0.5, label='Men Height Distribution')\\\\nplt.xlabel('Height (cm)')\\\\nplt.ylabel('Frequency')\\\\nplt.title('Men Height Distribution')\\\\nplt.show()\\\"}\",\n",
+      "                \"name\": \"execute_python\"\n",
+      "            },\n",
+      "            \"type\": \"function\",\n",
+      "            \"index\": 0\n",
+      "        }\n",
+      "    ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "SYSTEM_PROMPT = \"\"\"\n",
     "## your job & context\n",
@@ -170,12 +159,12 @@
     "\n",
     "client = openai.OpenAI(\n",
     "    base_url = \"https://api.fireworks.ai/inference/v1\",\n",
-    "    api_key = \"<YOUR_FIREWORKS_API_KEY>\"\n",
+    "    api_key = FIREWORKS_API_KEY\n",
     ")\n",
     "\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": SYSTEM_PROMPT},\n",
-    "    {\"role\": \"user\", \"content\": \"What are Nike's net income in 2022?\"}\n",
+    "    {\"role\": \"user\", \"content\": \"Plot a chart visualizing the height distribution of men based on the data you know.\"}\n",
     "]\n",
     "\n",
     "tools = [\n",
@@ -198,8 +187,9 @@
     "        },\n",
     "]\n",
     "\n",
+    "\n",
     "chat_completion = client.chat.completions.create(\n",
-    "    model=\"accounts/fireworks/models/fw-function-call-34b-v0\",\n",
+    "    model=\"accounts/fireworks/models/firefunction-v2\",\n",
     "    messages=messages,\n",
     "    tools=tools,\n",
     "    temperature=0.1\n",
@@ -210,21 +200,47 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 4. Defining the code interpreter\n",
+    "\n",
+    "Now we define the code interpreter.\n",
+    "\n",
+    "We use the ```function_call``` to extract the function call information from the chat completion response."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'execute_python'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[49], line 18\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m exec\u001b[38;5;241m.\u001b[39mresults\n\u001b[1;32m     17\u001b[0m function_call \u001b[38;5;241m=\u001b[39m chat_completion\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mfunction\n\u001b[0;32m---> 18\u001b[0m tool_response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlocals\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43mfunction_call\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m]\u001b[49m(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mjson\u001b[38;5;241m.\u001b[39mloads(function_call\u001b[38;5;241m.\u001b[39marguments))\n\u001b[1;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(tool_response)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'execute_python'"
+     ]
+    }
+   ],
    "source": [
-    "# Locally available tool implementation. Can be replaced by any remote API\n",
-    "def get_financial_data(metric: str, financial_year: int, company: str):\n",
-    "    print(f\"{metric=} {financial_year=} {company=}\")\n",
-    "    if metric == \"net_income\" and financial_year == 2022 and company == \"Nike\":\n",
-    "        return {\"net_income\": 6_046_000_000}\n",
-    "    else:\n",
-    "        raise NotImplementedError()\n",
+    "def code_interpret(e2b_code_interpreter, code):\n",
+    "  print(\"Running code interpreter...\")\n",
+    "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
+    "    code,\n",
+    "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+    "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
+    "    # You can also stream code execution results\n",
+    "    # on_result=...\n",
+    "  )\n",
+    "\n",
+    "  if exec.error:\n",
+    "    print(\"[Code Interpreter ERROR]\", exec.error)\n",
+    "  else:\n",
+    "    return exec.results\n",
+    "  \n",
     "\n",
     "function_call = chat_completion.choices[0].message.tool_calls[0].function\n",
     "tool_response = locals()[function_call.name](**json.loads(function_call.arguments))\n",
@@ -234,13 +250,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 5. Get agent's response"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tool_response' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[39], line 19\u001b[0m\n\u001b[1;32m      4\u001b[0m messages\u001b[38;5;241m.\u001b[39mappend(\n\u001b[1;32m      5\u001b[0m     {\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: agent_response\u001b[38;5;241m.\u001b[39mrole, \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     12\u001b[0m     }\n\u001b[1;32m     13\u001b[0m )\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Append the response from the tool \u001b[39;00m\n\u001b[1;32m     16\u001b[0m messages\u001b[38;5;241m.\u001b[39mappend(\n\u001b[1;32m     17\u001b[0m     {\n\u001b[1;32m     18\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrole\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfunction\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m---> 19\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcontent\u001b[39m\u001b[38;5;124m\"\u001b[39m: json\u001b[38;5;241m.\u001b[39mdumps(\u001b[43mtool_response\u001b[49m)\n\u001b[1;32m     20\u001b[0m     }\n\u001b[1;32m     21\u001b[0m )\n\u001b[1;32m     23\u001b[0m next_chat_completion \u001b[38;5;241m=\u001b[39m client\u001b[38;5;241m.\u001b[39mchat\u001b[38;5;241m.\u001b[39mcompletions\u001b[38;5;241m.\u001b[39mcreate(\n\u001b[1;32m     24\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccounts/fireworks/models/firefunction-v2\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     25\u001b[0m     messages\u001b[38;5;241m=\u001b[39mmessages,\n\u001b[1;32m     26\u001b[0m     tools\u001b[38;5;241m=\u001b[39mtools,\n\u001b[1;32m     27\u001b[0m     temperature\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.1\u001b[39m\n\u001b[1;32m     28\u001b[0m )\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28mprint\u001b[39m(next_chat_completion\u001b[38;5;241m.\u001b[39mchoices[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mcontent)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tool_response' is not defined"
+     ]
+    }
+   ],
    "source": [
     "agent_response = chat_completion.choices[0].message\n",
     "\n",
@@ -265,7 +295,7 @@
     ")\n",
     "\n",
     "next_chat_completion = client.chat.completions.create(\n",
-    "    model=\"accounts/fireworks/models/fw-function-call-34b-v0\",\n",
+    "    model=\"accounts/fireworks/models/firefunction-v2\",\n",
     "    messages=messages,\n",
     "    tools=tools,\n",
     "    temperature=0.1\n",
