--- a/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,12 +77,22 @@
    "source": [
     "### 2. Imports and API keys\n",
     "\n",
-    "You need to get your API keys and save them in .env file. You can copy and rename the .env.template file. We import all necessary libraries."
+    "You need to get your API keys and save them in .env file. You can copy and rename the .env.template file. We import all necessary libraries.\n",
+    "\n",
+    "This is what you should put in the .env file:\n",
+    "\n",
+    "```sh\n",
+    "# TODO: Get your Fireworks API key from https://fireworks.ai/api-keys\n",
+    "FIREWORKS_API_KEY = \"your_api_key\"\n",
+    "\n",
+    "# TODO: Get your E2B API key from https://e2b.dev/docs\n",
+    "E2B_API_KEY = \"your_api_key\"\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,10 +104,7 @@
     "load_dotenv()\n",
     "\n",
     "\n",
-    "# Get your Fireworks API key from https://fireworks.ai/api-keys\n",
     "FIREWORKS_API_KEY = os.getenv(\"FIREWORKS_API_KEY\")\n",
-    "\n",
-    "# Get your E2B API key from https://e2b.dev/docs\n",
     "E2B_API_KEY = os.getenv(\"E2B_API_KEY\")\n",
     "\n",
     "from e2b_code_interpreter import CodeInterpreter\n",
@@ -117,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
