--- a/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# Code Interpreting with a Fireworks LLM\n",
-    "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for [Firefunction-V2](https://fireworks.ai/models/fireworks/firefunction-v2) by Fireworks.\n",
+    "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for [Firefunction-v2](https://fireworks.ai/models/fireworks/firefunction-v2) by Fireworks.\n",
     "\n",
-    "We ask the Firefunction-V2 LLM to perform a data analysis task and use the [secure sandbox](https://e2b.dev/docs/sandbox/overview) given by E2B to execute code for accomplishing the task.\n",
+    "We use the [secure sandbox](https://e2b.dev/docs/sandbox/overview) given by E2B to execute code for accomplishing the task given to the Firefunction-v2.\n",
     ">"
    ]
   },
@@ -103,7 +103,6 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
     "\n",
-    "\n",
     "FIREWORKS_API_KEY = os.getenv(\"FIREWORKS_API_KEY\")\n",
     "E2B_API_KEY = os.getenv(\"E2B_API_KEY\")"
    ]
@@ -170,13 +169,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Defining the code interpreter\n",
+    "### 4. Defining the function for running the AI-generated code\n",
     "\n",
-    "Now we define the code interpreter that serves as an implementation of the ```execute_python``` tool. We are using use the ```code_interpret``` function to execute the provided code using ```exec_cell``` method.\n",
+    "We define the `code_interpret` function that uses the [E2B Code Interpreter SDK](https://e2b.dev/docs/code-interpreter/installation) to run AI-generated Python code.\n",
     "\n",
-    "For error handling, the function contains lambda functions (```on_stderr```, ```on_stdout```) printing any standard error and output from the code execution.\n",
+    "We will use `exec_cell` to execute the AI-generated code inside the code interpreter sandbox.\n",
     "\n",
-    "Learn more about the ```exec_cell``` method [here](https://e2b.dev/docs/code-interpreter/execution)."
+    "Learn more about the `exec_cell` method [here](https://e2b.dev/docs/code-interpreter/execution)."
    ]
   },
   {
@@ -189,8 +188,9 @@
     "  print(\"Running code interpreter...\")\n",
     "  exec = e2b_code_interpreter.notebook.exec_cell(\n",
     "    code,\n",
-    "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
+    "    # Stream stdout and stderr from the Code Interpreter\n",
     "    on_stdout=lambda stdout: print(\"[Code Interpreter]\", stdout),\n",
+    "    on_stderr=lambda stderr: print(\"[Code Interpreter]\", stderr),\n",
     "    # You can also stream code execution results\n",
     "    # on_result=...\n",
     "  )\n",
