--- a/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
@@ -207,7 +207,7 @@
    "source": [
     "### 5. Getting agent's response\n",
     "\n",
-    "Now we define a ```chat``` function that uses the Firefunction-v2 model to get agent's response to the user's task. If the response contains a call of Python execution, the code interpreter by E2B is used to securely run the code."
+    "Now we define a ```chat``` function that uses the Firefunction-v2 model to get agent's response to the user's task. If the response contains a tool call of `execute_python`, the code interpreter by E2B is used to securely run the code."
    ]
   },
   {
@@ -251,7 +251,7 @@
    "source": [
     "### 6. Printing the output\n",
     "\n",
-    "Finally we get the task result, applying the ```chat``` function.\n",
+    "Finally we get the task result, calling the ```chat``` function.\n",
     "\n",
     "Read more about how the execution with Code Interpreter SDK looks like [here](https://e2b.dev/docs/code-interpreter/execution)."
    ]
