--- a/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
@@ -326,7 +326,7 @@
     "  print(\"AI-generated Python runtime error:\", execution_output.error)\n",
     "\n",
     "  # Access any results of code execution - charts, interpreter last line, images, etc.\n",
-    "  print(execution_output.results)\n",
+    "  print(\"Results:\", execution_output.results)\n",
     "  if len(execution_output.results) == 0:\n",
     "    sys.exit(0)\n",
     "\n",
