--- a/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
+++ b/examples/fireworks-code-interpreter-python/fireworks_code_interpreter.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Code Interpreting with a Fireworks LLM\n",
+    "# Code interpreting with Fireworks\n",
     "This example uses the E2B's [Code Interpreter](https://github.com/e2b-dev/code-interpreter) as a tool for [Firefunction-v2](https://fireworks.ai/models/fireworks/firefunction-v2) by Fireworks.\n",
     "\n",
     "We use the [secure sandbox](https://e2b.dev/docs/sandbox/overview) given by E2B to execute code for accomplishing the task given to the Firefunction-v2.\n",
